# .dotfiles

./: .bashrc  .emacs-profiles.el  .gitconfig  .gitignore  .gitmodules  .gtkrc-2.0  .hgrc  .ideavimrc  .vimrc  .xprofile  .zshrc  README.md
.ICAClient/: wfclient.ini
.config/: .template.hgrc  compton.conf  greenclip.toml  starship.toml
.config/.restore-setup/: add_udev_rules  aur_packages  backup_pkgs  nftables.conf  notes.md  pacman_alias  pacman_hook-conf.sh  pacman_packages  setup.sh  skype_share_audio.sh  update-sys-conf-files.sh
.config/.shell-conf/: .bashrc
.config/alacritty/: alacritty.toml  alacritty.yml
.config/awesome/: lkscrip  rc.lua
.config/awesome_min/: .luarc.json  1  2  env.lua  my-rc.lua  rc.lua
.config/background-scripts/: update-check-job.sh
.config/cava/: config
.config/conky/: conky_basic.conf
.config/contour/: contour.yml
.emacs.d/: Emacs.org  init.el
.emacs.d.gnu/: Emacs.org  init.el
.emacs.d.gnu.noplug/: init.el  init.el~  nav-mode.el
.scripts/: color-pick  hdmi-sound-toggle  i3lock-widgets  invert-window  lock-run  lock-script  msi-mystic-1563.py  notification_helper  reboot-p  record  wait-suspend
.vim/: .netrwhist  vimrc
.xmonad/: README.md  autostart  build  my-xmonad.cabal  prompt-history  xmonad-x86_64-linux  xmonad.errors  xmonad.hs
.xmonad/build-x86_64-linux/: Main.hi
.xmonad/lib/: Config.hs
.xmonad/lib/Colors/: Monnet.hs  TomorrowNight.hs
.xmonad/lib/My/: Decorations.hs  Layouts.hs  Theme.hs
.xmonad/lib/My/CS/: Monnet.hs  TomorrowNight.hs
.xmonad/lib/My/Themes/: Monnet.hs  TomorrowNight.hs
(+337 files in other folders)
