name:                my-xmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             ../xmonad.hs
  -- other-modules lists custom modules in my ~/.xmonad/lib/ directory
  other-modules: Config  
                , My.Layouts
                , My.Theme
                , My.CS.Monnet
                , My.CS.TomorrowNight
                , My.WindowRules
                , My.Decorations
                , IndependentScreens
  build-depends:  base
                , xmonad >= 0.17
                , xmonad-contrib >= 0.17
                , X11
                , containers
                , process
                , utf8-string
                , bytestring
                , dbus
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -fno-warn-missing-signatures -threaded
